--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".presentation.TodoActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
